<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmw_dds_common_generators</name>
  <version>0.7.3</version>
  <description>Generators used in rmw_dds_common.</description>
  <maintainer email="ivanpauno@ekumenlabs.com">Ivan Paunovic</maintainer>
  <license>Apache License 2.0</license>
  <author>Ivan Paunovic</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_cmake</buildtool_depend>

  <buildtool_export_depend>ament_cmake</buildtool_export_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>

  <buildtool_export_depend>rosidl_generator_c</buildtool_export_depend>
  <buildtool_export_depend>rosidl_generator_cpp</buildtool_export_depend>

  <buildtool_export_depend>rosidl_typesupport_introspection_c</buildtool_export_depend>
  <buildtool_export_depend>rosidl_typesupport_introspection_cpp</buildtool_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <group_depend>rosidl_typesupport_cpp_packages</group_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
